test/should_not_compile/record6.sml
val { a } = { a = "A", b = 42 };
